fixed logo size, added center alignment

--- a/style.css
+++ b/style.css
@@ -88,8 +88,13 @@ body {
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1em;
 }
+
+.logo {
+        width: 80%;
+    }
 
 .intro {
     padding: 0 1em;
@@ -174,6 +179,7 @@ footer {
 .footer-nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 2em 1em;
 }
 
